<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sud.barros.com.appcadastro.MainActivity"
    android:weightSum="1">


    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/digite_seu_nome"
        android:inputType="text" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/digite_seu_e_mail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rbMasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/masc" />

        <RadioButton
            android:id="@+id/rbFem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fem" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hobbies"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ler" />

        <CheckBox
            android:id="@+id/cbDancar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dan_ar" />

        <CheckBox
            android:id="@+id/cbViajar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/viajar" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spTimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13" />

    <Button
        android:id="@+id/btSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:text="@string/salvar" />

    <Button
        android:id="@+id/btChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foto" />

    <ImageView
        android:id="@+id/imgFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.21"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:ignore="ContentDescription" />

</LinearLayout>
